syntax = "proto3";

package pb;

option go_package = "github.com/23nazaryan/simplebank/pg";

message UpdateUserRequest {
  optional string username = 1;
  optional string full_name = 2;
  optional string email = 3;
  optional string password = 4;
}

message UpdateUserResponse {}
